<resources>
    <string name="app_name">FlappyBird</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_password_sec">请再次输入密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_register">注册</string>
    <string name="action_level">难度</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">用户名地址无效</string>
    <string name="error_invalid_password">密码太短了</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">这里不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
